# sheetmusic_metadata

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  Taskfile.yml  composer_names.sh  composers.csv  fix_csv_spacing.sh  metadata_script.sh  pyproject.toml
app/: metadata.py
app/entrypoints/: cli.py
sheetmusic_metadata/: __init__.py  cli.py  composer_lookup.py  formatting.py  instrument_family.py  parsing.py  pdf_metadata.py
tests/: __init__.py  composer_lookup_tests.bats  formatting_tests.bats  metadata_script_tests.bats  parsing_tests.bats  test_cli.py  test_composer_lookup.py  test_conflict_handling.py  test_formatting.py  test_helper.bash  test_instrument_family.py  test_metadata.py  test_metadata_generation.py  test_parsing.py  test_pdf_integration.py
