[project]
name = "sheetmusic-metadata"
version = "1.0.0"
description = "Automates PDF metadata tagging for sheet music files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
sheetmusic-metadata = "sheetmusic_metadata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]
